// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardDate Should match Snapshot 1`] = `
<span
  className="sc-htpNat iKXCly"
/>
`;

exports[`CardPrice Should match Snapshot 1`] = `
<span
  className="sc-bxivhb loNQxT"
/>
`;

exports[`CardTitle Should match Snapshot 1`] = `
<span
  className="sc-bwzfXH irRuWv"
/>
`;

exports[`MainCartCardDiv Should match Snapshot 1`] = `
<div
  className="sc-bdVaJa JtPMB"
/>
`;
